[Feat] Add `filter by ID` feature on SqlBuilder